# SGA

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CLAUDE.md  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.py
.ci/: build-paper.sh
LSLGA/: build-lslga-parent.py  groups.py  html.py  io.py  match.py  misc.py  qa.py
archive/bin-SGA2020/: SGA-attic  SGA-env  SGA-lg9-env  SGA-lg9-mpi.slurm  SGA-localgroup-dwarfs  SGA-mpi  SGA-shifter  match-hyperleda-allwise.slurm
archive/bin-SGA2025/: SGA2025-build-parent  SGA2025-calibrate-r26  SGA2025-cutouts  SGA2025-env  SGA2025-mpi.sh  SGA2025-query-ned  SGA2025-tractor-qa  bricks-in-sga  build-gaia-mask  check-bricklist.py  check-elongated-groups.py  check-groups.py  check-lvd.py  checksums_sga2025.py  dedup_regions.py  find-truncated-groups.py  fixgeo-bricks  generate_sga_jobs.sh  groups-to-refit-v1.2.py  groups-to-refit-v1.3.py  groups-to-refit-v1.4.py  groups-to-refit-v1.5.py  parse-dr910  parse-smudges  sga-version-one.sh  sga-versions.sh  ssl_run.py  test_overlap.py  validate_sga2025.py
doc/: Cutouts.ipynb  NERSC-setup.rst  README.rst  SGA-2024.ipynb  SGA-2025-notes  SGA-data.ipynb  SGA2025-tutorial-maskbits.ipynb  SearchForCoolGalaxies.ipynb  acknowledgments.rst  build-lslga-parent.ipynb  compare-wxsc-largest-galaxies.ipynb  conf.py  dr9-check-G13-stars.ipynb  index.rst  install.rst  lslga-galaxy-pairs.ipynb  lslga-groups.ipynb  requirements.txt  sga2025.rst
doc/SGA2020/: qa-SGA-ellipse-v3.0.ipynb
doc/nb/: adap-2018-figures.ipynb  build-lslga-parent.ipynb  cutouts.html  cutouts.html~  diam-vs-mag.ipynb  explore-parent-sample.ipynb  lslga-coadds.ipynb  lslga-explore-ned-sample.ipynb  lslga-explore-sample.ipynb  lslga-groups.ipynb  mag-vs-lambda.ipynb  maglim-plots.ipynb  masking.ipynb  playing-with-ned-pull.ipynb  playing.ipynb  plot-d25-mag-ForPaper.ipynb
doc/sandbox/: playing.ipynb
doc/tutorials/: SGA-ssl.ipynb
docker/: Dockerfile  README.md
etc/: README.md  README.sga-slurm  activate-sga.sh  activate.sh  create-env-laptop-sga.sh  create-env-laptop-sgaml.sh  create-env-laptop.sh  create-env-sga.sh  create-env-sgaml.sh  create-env.sh  environment-laptop-sga.yml  environment-laptop-sgaml.yml  environment-laptop.yml  environment-sga.yml  environment.yml  install-kernel-sgaml.sh  install-kernel.sh  kernel-sga.json  kernel.json  perlmutter-2  sga-env.sh  update-env-sga.sh  update-env-sgaml.sh  update-env.sh
nb/: build-lslga-parent.ipynb  lslga-groups-nbodykit.ipynb  lslga-groups.ipynb
paper/: Makefile  intro.tex  modeling.tex  ms.tex  sample.tex  summary.tex  vc.tex
py/LSLGA/: NLSA.py  coadds.py  desiutil.py  ellipse.py  galex.py  io.py  large-galaxies-plots.py  manga.py  mge.py  misc.py  mpi.py  qa.py  unwise.py
py/LSLGA/sandbox/: lslga-manifest.py  lslga_group.pro  obsolete.py  sample-find-junk.ipynb  sample-junk.ipynb
py/SGA/: #parent.py#  .#parent.py  SGA.py  brick.py  calibrate.py  coadds.py  cosmo.py  cutouts.py  dust.py  ellipse.py  external.py  find_galaxy.py  galex.py  geometry.py  groups.py  html.py  io.py  log.py  logger.py  misc.py  mpi.py  parent.py  photo.py  photoz.py  qa.py  sky.py  ssl.py  ssl_build_montage.py  ssl_sort.py  unwise.py  util.py
py/SGA/data/: SGA2025-photinfo.yaml
py/SGA/data/SGA2020/: SGA2020-missing-galaxies.ecsv
py/SGA/data/SGA2024/: SGA2024-crossid-errors.csv  SGA2024-vi-actions.csv  SGA2024-vi-properties.csv  SGA2024-vi-repair.csv
py/SGA/data/SGA2025/: LVD-geometry-updates-v1.0.5.csv  LVD-geometry-updates.csv  SGA2024-crossid-errors.csv  SGA2025-crossid-errors.csv  SGA2025-fixgeo.csv  SGA2025-forcegaia.csv  SGA2025-forcepsf.csv  SGA2025-lessmasking.csv  SGA2025-momentpos.csv  SGA2025-moremasking.csv  SGA2025-parent-custom.csv  SGA2025-parent-drop.csv  SGA2025-parent-properties.csv  SGA2025-radweight.csv  SGA2025-resolved.csv  SGA2025-vi-actions.csv  SGA2025-vi-drop.csv  SGA2025-vi-properties.csv  custom-external_v1.0.csv  (+5 more)
py/SGA/sandbox/: LSLGA-wise-galex  README.rst  sandbox.py  sga2020.rst
py/SGA/templates/: index.html  list.html  sample.html
py/SGA/webapp/: README  load.py  manage.py  models.py  nginx.conf  settings.py  urls.py  uwsgi.ini  wsgi.py
science/SGA2020/: SGA2020-figures  discussion.tex  modeling.tex  ms.tex  sga-bgspv-targets.py  vc.tex
science/SGA2025/: DR11-sky-calibs.ipynb  SGA2020-diameters.ipynb  SGA2025-Clouds.ipynb  SGA2025-LVD.ipynb
science/SGA2026/: completeness-plan.md
science/chaos/: CHAOS-sbprofiles.ipynb  get-sdss-mosaics
science/paper1/: figures.ipynb  sample.tex
science/proposals/: NSF-CDSE-2018.ipynb  adap-2019-figures.ipynb  maglim-plots.ipynb  ngc5322-sedfit.py
(+73 files in other folders)
