[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "SGA"
version = "0.2.0"
description = "Siena Galaxy Atlas"
readme = "README.rst"
license = {file = "LICENSE"}
authors = [
    {name = "John Moustakas", email = "jmoustakas@siena.edu"},
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "astropy",
    "fitsio",
    "matplotlib",
    "scipy",
    "photutils",
    "pydl",
]

[project.optional-dependencies]
mpi = ["mpi4py"]
doc = [
    "sphinx>=7",
    "furo>=2024.1.29",
]

[project.urls]
Homepage = "https://github.com/moustakas/SGA"

# ---------------------------------------------------------------------------
# Package discovery
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["py"]

# ---------------------------------------------------------------------------
# Scripts
# All SGA-2025 processing scripts are archived under archive/bin-SGA2025/.
# Only the active QA script remains in bin/ until the public data release.
# Future SGA releases will add scripts directly to bin/.
# ---------------------------------------------------------------------------
[tool.setuptools]
script-files = [
    "bin/SGA2025-mpi",
]
